plugins {
    id 'java'
}

group = 'de.plixo'
version = '0.1'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.jetbrains:annotations:24.0.1'
    implementation 'org.jetbrains:annotations:24.0.1'
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'

    implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'

    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
    implementation 'org.apache.commons:commons-text:1.10.0'

    implementation 'net.bytebuddy:byte-buddy:1.14.10'
//    implementation 'net.bytebuddy:byte-buddy-agent:1.7.1'
    implementation group: 'net.bytebuddy', name: 'byte-buddy-agent', version: '1.14.10'


    implementation 'org.ow2.asm:asm:9.5'
    implementation 'org.ow2.asm:asm-commons:9.5'
    implementation 'org.ow2.asm:asm-util:9.5'
    implementation 'org.ow2.asm:asm-tree:9.5'


}


sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

jar {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
    manifest {
        attributes(
            'Main-Class': 'de.plixo.galactic.Main'
        )
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
